force-app/main/default/objects/Inbound_Staging__c/Inbound_Staging__c.object-meta.xml
<CustomObject>
    <description>Staging table for inbound revenue data from all five source systems before promotion to canonical Actual_Revenue__c records.</description>
    <label>Inbound Staging</label>
    <nameField>
        <displayFormat>STG-{0000000}</displayFormat>
        <label>Staging ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Staging Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>