force-app/main/default/objects/Inbound_Staging__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Staging Records</relationshipLabel>
    <relationshipName>Inbound_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>