force-app/main/default/objects/Inbound_Staging__c/fields/Advertiser_Name__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Name__c</fullName>
    <label>Advertiser Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>