force-app/main/default/objects/Inbound_Staging__c/fields/AE_Code__c.field-meta.xml
<CustomField>
    <fullName>AE_Code__c</fullName>
    <description>Account Executive identifier. CoxReps provides this in email format; transformer normalizes to username prefix.</description>
    <label>AE Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>