force-app/main/default/objects/Inbound_Staging__c/fields/AE_User__c.field-meta.xml
<CustomField>
    <fullName>AE_User__c</fullName>
    <label>AE User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Inbound Staging Records</relationshipLabel>
    <relationshipName>Inbound_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>