force-app/main/default/objects/Inbound_Staging__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <label>Agency Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>