force-app/main/default/objects/Inbound_Staging__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <description>AsyncApexJob ID of the IngestBatch run that created or last updated this staging row. Useful for grouping rows by load run.</description>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>