force-app/main/default/objects/Inbound_Staging__c/fields/Broadcast_Period__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Period__c</fullName>
    <description>Period identifier in YYYY-MM format. Operative rows produce two staging records: one calendar-month and one broadcast-month period.</description>
    <label>Broadcast Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>