force-app/main/default/objects/Inbound_Staging__c/fields/Excluding_Rule__c.field-meta.xml
<CustomField>
    <fullName>Excluding_Rule__c</fullName>
    <description>Token identifying why this row was excluded (e.g., NULL_GUID, UNKNOWN_ADVERTISER, MALFORMED_ROW).</description>
    <label>Excluding Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>