force-app/main/default/objects/Inbound_Staging__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>Idempotency key constructed by each transformer (source_system + row fingerprint). Upsert on this field prevents duplicate staging rows from re-loads.</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>