force-app/main/default/objects/Inbound_Staging__c/fields/Is_Preempt__c.field-meta.xml
<CustomField>
    <fullName>Is_Preempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preempt</label>
    <type>Checkbox</type>
    <description>Set by source-system transformer when the row represents preempted inventory; carried to Actual_Revenue__c by ReconciliationEngine.</description>
</CustomField>