force-app/main/default/objects/Inbound_Staging__c/fields/Load_Batch__c.field-meta.xml
<CustomField>
    <fullName>Load_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Load Batch</label>
    <referenceTo>Load_Batch__c</referenceTo>
    <relationshipLabel>Inbound Staging Records</relationshipLabel>
    <relationshipName>Inbound_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>