force-app/main/default/objects/Inbound_Staging__c/fields/Match_AE_Tier__c.field-meta.xml
<CustomField>
    <fullName>Match_AE_Tier__c</fullName>
    <label>Match AE Tier</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>