force-app/main/default/objects/Inbound_Staging__c/fields/Preempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Preempt_Status__c</fullName>
    <label>Preempt Status</label>
    <type>Picklist</type>
    <description>Initial preempt status from source (Active for newly held inventory, Cancelled for cancellation feeds). Carried to Actual_Revenue__c.Preempt_Status__c.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>