force-app/main/default/objects/Inbound_Staging__c/fields/Raw_Advertiser_Code__c.field-meta.xml
<CustomField>
    <fullName>Raw_Advertiser_Code__c</fullName>
    <label>Raw Advertiser Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>