force-app/main/default/objects/Inbound_Staging__c/fields/Raw_Advertiser_Name__c.field-meta.xml
<CustomField>
    <fullName>Raw_Advertiser_Name__c</fullName>
    <label>Raw Advertiser Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>