force-app/main/default/objects/Inbound_Staging__c/fields/Raw_Record__c.field-meta.xml
<CustomField>
    <fullName>Raw_Record__c</fullName>
    <label>Raw Record</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Original delimited row from the source file, preserved verbatim for audit and re-processing.</description>
</CustomField>