force-app/main/default/objects/Inbound_Staging__c/fields/Raw_Salesperson_Code__c.field-meta.xml
<CustomField>
    <fullName>Raw_Salesperson_Code__c</fullName>
    <label>Raw Salesperson Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>