force-app/main/default/objects/Inbound_Staging__c/fields/Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Amount__c</fullName>
    <label>Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>