force-app/main/default/objects/Inbound_Staging__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>