force-app/main/default/objects/Inbound_Staging__c/fields/Source_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Order_Number__c</fullName>
    <description>Source-system order identifier carried from CSV through staging to Actual_Revenue__c for preempt linking.</description>
    <label>Source Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>