force-app/main/default/objects/Inbound_Staging__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source System</label>
    <referenceTo>Source_System__c</referenceTo>
    <relationshipLabel>Inbound Staging Records</relationshipLabel>
    <relationshipName>Inbound_Staging_Records</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>