force-app/main/default/objects/Inbound_Staging__c/fields/Staging_Key__c.field-meta.xml
<CustomField>
    <fullName>Staging_Key__c</fullName>
    <externalId>true</externalId>
    <label>Staging Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>