force-app/main/default/objects/Inbound_Staging__c/fields/Station_Code__c.field-meta.xml
<CustomField>
    <fullName>Station_Code__c</fullName>
    <label>Station Code</label>
    <type>Text</type>
    <length>50</length>
    <description>Station or outlet identifier from the source system. Used for matching to Outlet__c reference records.</description>
</CustomField>